containers/bitwarden-cli/manifests/bitwarden-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  name: bitwarden
spec: {}
